# cmake-template

./: CMakeLists.txt  README.md  hello-qt.cpp  hello.c
